// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple sizes 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/2add071a9e85f275bcb9217ccd2ffca9-500.jpg",
      "width": 500,
    },
    Object {
      "height": 900,
      "path": "foobar/c239a7d5a3e69d39dac5998c1ebb11d0-1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/2add071a9e85f275bcb9217ccd2ffca9-500.jpg",
  "srcSet": "foobar/2add071a9e85f275bcb9217ccd2ffca9-500.jpg 500w,foobar/c239a7d5a3e69d39dac5998c1ebb11d0-1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`output first resized image height & width 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/2add071a9e85f275bcb9217ccd2ffca9-500.jpg",
      "width": 500,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/2add071a9e85f275bcb9217ccd2ffca9-500.jpg",
  "srcSet": "foobar/2add071a9e85f275bcb9217ccd2ffca9-500.jpg 500w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`output should be relative to context 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/test/2add071a9e85f275bcb9217ccd2ffca9-500x450.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/test/fb9a96e23c0f6afc0375cf511502b124-750x675.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/test/c239a7d5a3e69d39dac5998c1ebb11d0-1000x900.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/test/2add071a9e85f275bcb9217ccd2ffca9-500x450.jpg",
  "srcSet": "foobar/test/2add071a9e85f275bcb9217ccd2ffca9-500x450.jpg 500w,foobar/test/fb9a96e23c0f6afc0375cf511502b124-750x675.jpg 750w,foobar/test/c239a7d5a3e69d39dac5998c1ebb11d0-1000x900.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`png 1`] = `
Object {
  "height": 580,
  "images": Array [
    Object {
      "height": 580,
      "path": "foobar/dfeecbec599f476d3a0215bb6e7f3dd6-500.png",
      "width": 500,
    },
    Object {
      "height": 595,
      "path": "foobar/711285969b04c54a921259f638713eaf-513.png",
      "width": 513,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/dfeecbec599f476d3a0215bb6e7f3dd6-500.png",
  "srcSet": "foobar/dfeecbec599f476d3a0215bb6e7f3dd6-500.png 500w,foobar/711285969b04c54a921259f638713eaf-513.png 513w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`png to jpeg with background color 1`] = `
Object {
  "height": 580,
  "images": Array [
    Object {
      "height": 580,
      "path": "foobar/3fe5038768ca37c6d6c90b3ac693eff5-500.jpg",
      "width": 500,
    },
    Object {
      "height": 595,
      "path": "foobar/1b6868f2cfc8a01322d2ec5c5dcfe6a8-513.jpg",
      "width": 513,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/3fe5038768ca37c6d6c90b3ac693eff5-500.jpg",
  "srcSet": "foobar/3fe5038768ca37c6d6c90b3ac693eff5-500.jpg 500w,foobar/1b6868f2cfc8a01322d2ec5c5dcfe6a8-513.jpg 513w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`single size 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/2add071a9e85f275bcb9217ccd2ffca9-500.jpg",
      "width": 500,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/2add071a9e85f275bcb9217ccd2ffca9-500.jpg",
  "srcSet": "foobar/2add071a9e85f275bcb9217ccd2ffca9-500.jpg 500w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`with placeholder image 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/2add071a9e85f275bcb9217ccd2ffca9-500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/fb9a96e23c0f6afc0375cf511502b124-750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/c239a7d5a3e69d39dac5998c1ebb11d0-1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": "data:image/jpeg;base64,/9j/2wBDAAIBAQEBAQIBAQECAgICAgQDAgICAgUEBAMEBgUGBgYFBgYGBwkIBgcJBwYGCAsICQoKCgoKBggLDAsKDAkKCgr/2wBDAQICAgICAgUDAwUKBwYHCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgr/wAARCAAkACgDAREAAhEBAxEB/8QAGwAAAgIDAQAAAAAAAAAAAAAABQgGCQIEBwP/xAAuEAACAQMDAgQFBAMAAAAAAAABAgMEBREABgcIIQkSMUEKEyJRYRQjMnEVUrH/xAAaAQACAwEBAAAAAAAAAAAAAAAAAgMEBQEG/8QAKBEAAgIBAwMDBAMAAAAAAAAAAQIAAxEEITEFEkEGIlETFDKBcZGx/9oADAMBAAIRAxEAPwCGcofDr2rcW76GPirkez7a288+bnJ+hqJKyGEYxHDGXMcpOCfM7Jgn3HbWg+kQn27St9SwrhjmAF+GeudJv63XGDqkgrtvxzM9wp67azR1RUHKIipK0bj/AGLMvp2B0n2W/M6LDjeHOVPhmeI9x0LVnG/O93slzIODLZ45aVz7AxiQMnvkgn+vvI2kQjY4gLWE5Bcfh0urLhjc1m3zw5yltnd01L5hc7fWMba4J7ERtISjLj3YqfxqlrOnPfQa1PM0emdQGh1qXkcf5Gj6XvB8qqPcVDv/AKrK2214pHWaHadsIkp2lU5H6mXGJVGB+2n0t7kjKnP6f6fFNgsvOcePH7noerern1NRq0q9oPLHn9fH8ywe+3/b2ztvV+7d1XWnt9rtlM9TXV9R9MdPCgyzufYDGvTnYTxBOBEI5x+Ij6T+Pb3NZuI+Pr5vr5LFf8rHOluo3b7p81GkkX8+VP61VfVopwBmSLW5GeIU6QvHl6feovkuh4t5B44uOxK+7kpbrlU3OOqoZJsFgjsFVocgdmORnsceuuJrKycNtA02GOlYeTeK94VCU20eRtu3aSV/lxpbL5S1BZ+/0gRuTnse2rPenzEwYUeiikTykk574f0zp4SvDqN8Njqi3nxNuC8dWniM3i97Z2/ZqmsmommenoyYoy6tUD6UIB9XZWPfWdbTqmU9zgCTK9S79sqQh2RLeKwRWORa9MRlFo0MhcMcLlf5DJwB9yffWeMund5lk4RseI1nRJ4W/MPLSbiv13uMe0LztK9i3rbr9BLHMZvlK7ZAGVGHBHrntprKiUOTgxEuCWA+I8nh0+G1dul7qLh5km3bQm2w2eVLpRJUPM1bdZQymVAY08kSgqQTk58wwOx1PpaGFoc8CctuUoVHmP5HPTVIEqqwUE+ZSB27ffWvtKkjd12HtrcFmqLJfrBBXQXGMxVlDWxfOgmVvVZEYFXBHqCMffUWM7Qi68jeFptPdnUXYepTZF0tm3LnZpEWqpKWyQtT1kcYIiKxqFEcqZ7Nj2B9QDqF9MC4cbYjh2CkGSjlzhHmW80s1jo69JIbvGy1l1oqJFq1kRPod3BDDsvkD9yOwHtqO+tnwRBCAd4c6FuH+bth8F0di5/vlTc7rT3WsNNc6yRWqamkaT9ppgoAV+zdh6AjTaZLQmH+T/U7YULe2doeyGnVpImLD3U/81bxtI5uRU6K5kJJOfc66dt4TxqU8syFXYZ7+vppD+UJjb55XglkdyxL47/3plHMJv1kSwqkSkkSH6s/jGnhMIwHjErd2f8Akfvg40Qn/9k=",
  "src": "foobar/2add071a9e85f275bcb9217ccd2ffca9-500.jpg",
  "srcSet": "foobar/2add071a9e85f275bcb9217ccd2ffca9-500.jpg 500w,foobar/fb9a96e23c0f6afc0375cf511502b124-750.jpg 750w,foobar/c239a7d5a3e69d39dac5998c1ebb11d0-1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`with size defined in webpack.config.js 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/2add071a9e85f275bcb9217ccd2ffca9-500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/fb9a96e23c0f6afc0375cf511502b124-750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/c239a7d5a3e69d39dac5998c1ebb11d0-1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/2add071a9e85f275bcb9217ccd2ffca9-500.jpg",
  "srcSet": "foobar/2add071a9e85f275bcb9217ccd2ffca9-500.jpg 500w,foobar/fb9a96e23c0f6afc0375cf511502b124-750.jpg 750w,foobar/c239a7d5a3e69d39dac5998c1ebb11d0-1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;
